--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,17 +1,39 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Tab 1
+      NOTES
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 1</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <ion-input placeholder="Judul" [(ngModel)]="Judul"></ion-input>
+  <ion-input placeholder="Isi" [(ngModel)]="Isi"></ion-input>
+  <ion-datetime value="2019-10-01" placeholder="Tanggal" [(ngModel)]="Tgl"></ion-datetime>
+  <ion-input placeholder="Nilai" [(ngModel)]="Nilai"></ion-input>
 
-  <app-explore-container name="Tab 1 page"></app-explore-container>
+  <ion-fab vertical="bottom" horizontal="center" slot ="fixed">
+    <ion-fab-button (click)="tambahfoto()">
+      <ion-icon name="camera-outline"></ion-icon>
+    </ion-fab-button>
+    <br>
+    <ion-button (click)="upload()">
+      UPLOAD
+     </ion-button>
+  </ion-fab>
+
+  <ion-grid>
+    <ion-row>
+      <ion-col size="6" *ngFor="let a of FotoService.datafoto; let i = index">
+        <ion-img [src]="a.webviewpath"></ion-img>
+      </ion-col>
+      </ion-row>
+  </ion-grid>
+
+    <ion-list>
+      <ion-item *ngFor="let data of isidata | async">
+        <h1>{{data.judul}}</h1>
+        <p>{{data.isi}}</p>
+      </ion-item>
+    </ion-list>
 </ion-content>
