--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -14,7 +14,7 @@
 
   <ion-fab vertical="bottom" horizontal="center" slot ="fixed">
     <ion-fab-button (click)="tambahfoto()">
-      <ion-icon name="camera-outline"></ion-icon>
+      <ion-icon name="image-outline"></ion-icon>
     </ion-fab-button>
     <br>
     <ion-button (click)="upload()">
