--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -10,10 +10,17 @@
 <ion-content [fullscreen]="true">
   <ion-list>
     <ion-item *ngFor="let data of isiData | async; let i = index">
-      <p>Judul : {{data.judul}}</p><br>
-      <p>Isi notes : {{data.isi}}</p>
-      <p>Tanggal : {{data.tgl}}</p>
-      <p>Nilai : {{data.nilai}}</p>
+      <ion-label>
+      <h2>{{i+1}}. Judul : {{data.judul}}</h2><br>
+      <p>Isi notes : {{data.isi}}</p><br>
+      <p>Tanggal : {{data.tgl}}</p><br>
+      <p>Nilai : {{data.nilai}}</p><br>
+      <ion-row *ngFor="let ifoto of urlimagestorage; let i = index">
+        <ion-img [src]="ifoto"></ion-img> 
+        <ion-col>
+        </ion-col>
+      </ion-row>
+    </ion-label>
     </ion-item>
   </ion-list>
 </ion-content>
