--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -2,18 +2,23 @@
 
   <ion-tab-bar slot="bottom">
     <ion-tab-button tab="tab1">
-      <ion-icon name="triangle"></ion-icon>
-      <ion-label>Tab 1</ion-label>
+      <ion-icon name="add-circle-outline"></ion-icon>
+      <ion-label>ADD NOTES</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="tab2">
-      <ion-icon name="ellipse"></ion-icon>
-      <ion-label>Tab 2</ion-label>
+      <ion-icon name="list-outline"></ion-icon>
+      <ion-label>LIST NOTES</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="tab3">
-      <ion-icon name="square"></ion-icon>
-      <ion-label>Tab 3</ion-label>
+      <ion-icon name="information-circle-outline"></ion-icon>
+      <ion-label>DETAIL NOTES</ion-label>
+    </ion-tab-button>
+
+    <ion-tab-button tab="tab4">
+      <ion-icon name="cloud-upload-outline"></ion-icon>
+      <ion-label>UPLOAD DELETE</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
 
